# envie

./: .envie.example.yaml  .gitignore  Cargo.toml  README.md  test_dependency_resolution.yaml  test_deps.rs  workspace.envie.example
example/: test-envie.sh  test-minimal.envie  workspace.envie
example/services/api/: .envie
example/services/api/modules/gateway/: main.tf
example/services/api/modules/lambda/: main.tf
example/services/api/modules/step-functions/: main.tf
example/services/database/: .envie
example/services/database/modules/dynamodb/: main.tf
example/services/database/modules/rds/: main.tf
example/services/networking/: .envie
example/services/networking/modules/security-groups/: main.tf
example/services/networking/modules/subnets/: main.tf
example/services/networking/modules/vpc/: main.tf
reference/: arya  braavos  stark
services/api/: .envie.example
services/api/modules/lambda/: .envie.example
services/database/: .envie.example
services/networking/: .envie.example
src/: main.rs
src/cli/: args.rs  commands.rs  handler.rs
src/commands/: clean.rs  deploy.rs  destroy.rs  env.rs  generate.rs  init.rs  list.rs  mod.rs  output.rs  show.rs
src/common/: environment.rs  error.rs  mod.rs  output.rs  service_config.rs  service_discovery.rs  terraform.rs  terraform_generator.rs  terraform_scanner.rs
