[package]
name = "envie"
version = "0.1.0"
edition = "2021"
description = "A tool for managing multiple ephemeral environments in Terraform with layered dependencies and resource sharing"
authors = ["Christian Gennaro Faraone"]
license = "MIT"

[[bin]]
name = "envie"
path = "src/main.rs"


[dependencies]
# CLI and argument parsing
clap = { version = "4.4", features = ["derive", "color"] }
clap-num = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# File system operations
walkdir = "2.4"

# Process execution
which = "4.4"



# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Terminal colors and formatting
colored = "2.0"
indicatif = "0.17"

# Path manipulation
pathdiff = "0.2"

# Regular expressions
regex = "1.10"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Configuration
config = "0.14"

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }


[dev-dependencies]
tempfile = "3.8"
mockito = "1.2"
